--- a/styles/logic.css
+++ b/styles/logic.css
@@ -3,9 +3,9 @@
   box-sizing: border-box;
 }
 .Canvas input[type=checkbox] {
-  width: 3rem;
-  height: 3rem;
-  margin: 0;
+  width: 3.25rem;
+  height: 3.25rem;
+  margin: -0.125rem;
   padding: 0;
   position: relative;
   overflow: hidden;
@@ -13,8 +13,8 @@
 .Canvas input[type=checkbox]:before {
   content: '';
   display: block;
-  width: 3rem;
-  height: 3rem;
+  width: 3.25rem;
+  height: 3.25rem;
   box-sizing: border-box;
   background-color: #e0e0e0;
   border: 0.125rem solid #ffa000;
@@ -29,9 +29,9 @@
   content: '0\00000a1';
   font-size: 2rem;
   display: block;
-  width: 3rem;
-  height: 3rem;
-  line-height: 3rem;
+  width: 3.25rem;
+  height: 3.25rem;
+  line-height: 3.25rem;
   text-align: center;
   position: absolute;
   top: 0;
@@ -39,7 +39,7 @@
           transition: top cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
 }
 .Canvas input[type=checkbox]:checked:after {
-  top: -3rem;
+  top: -3.25rem;
 }
 .Canvas input[type=checkbox]:checked + .Connector,
 .Canvas input[type=checkbox]:checked + .Connector:before {
@@ -118,7 +118,6 @@
   background: #e0e0e0;
   -webkit-transition: background cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
           transition: background cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
-  box-sizing: content-box;
   z-index: 1;
 }
 .Connector.Corner:before {
@@ -134,13 +133,11 @@
 .Connector.Vertical {
   width: 0.5rem;
   margin-left: -0.375rem;
-  margin-top: -0.125rem;
-  padding: 0.125rem 0;
   border-left: 0.125rem solid #ffa000;
   border-right: 0.125rem solid #ffa000;
 }
 .Connector.Vertical.Corner:before {
-  top: -0.25rem;
+  top: -0.375rem;
   left: -0.125rem;
   border-top: 0.125rem solid #ffa000;
 }
@@ -157,7 +154,6 @@
   background: none !important;
   border: none;
   padding: 0 0.125rem;
-  margin-top: 0.125rem;
   height: 1rem;
 }
 .Connector.Vertical.Convex:before {
@@ -185,7 +181,7 @@
   position: absolute;
   width: 0.625rem;
   width: 1.375rem;
-  height: 0.20576441rem;
+  height: 0.19951441rem;
 }
 .Connector.Vertical.Convex.Left:after {
   right: 0;
@@ -198,18 +194,16 @@
 .Connector.Horizontal {
   height: 0.5rem;
   margin-top: -0.375rem;
-  margin-left: -0.125rem;
-  padding: 0 0.125rem;
   border-top: 0.125rem solid #ffa000;
   border-bottom: 0.125rem solid #ffa000;
 }
 .Connector.Horizontal.Corner.Left:before {
-  left: -0.25rem;
+  left: -0.375rem;
   top: -0.125rem;
   border-left: 0.125rem solid #ffa000;
 }
 .Connector.Horizontal.Corner.Right:before {
-  right: -0.25rem;
+  right: -0.375rem;
   top: -0.125rem;
   border-right: 0.125rem solid #ffa000;
 }
@@ -222,10 +216,11 @@
   padding-bottom: 0.125rem;
 }
 .Result {
-  border-radius: 1.5rem;
+  border-radius: 1.625rem;
+  margin: -0.125rem;
   display: block;
-  width: 3rem;
-  height: 3rem;
+  width: 3.25rem;
+  height: 3.25rem;
   box-sizing: border-box;
   background-color: #e0e0e0;
   border: 0.125rem solid #ffa000;
@@ -239,9 +234,9 @@
   content: '0\00000a1';
   font-size: 2rem;
   display: block;
-  width: 3rem;
-  height: 3rem;
-  line-height: 3rem;
+  width: 3.25rem;
+  height: 3.25rem;
+  line-height: 3.25rem;
   text-align: center;
   position: absolute;
   top: 0;
@@ -254,7 +249,7 @@
   width: 4rem;
   height: 4rem;
   z-index: 0;
-  margin-top: -0.32206703rem;
+  margin-top: -0.44706703rem;
   overflow: hidden;
 }
 .Gate-XOR:after,
@@ -324,7 +319,7 @@
 }
 #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result:after,
 #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result:after {
-  top: -3rem;
+  top: -3.25rem;
 }
 #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result + .Connector,
 #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result + .Connector,
@@ -354,7 +349,7 @@
   background-color: #ffc107;
 }
  #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result:after {
-  top: -3rem;
+  top: -3.25rem;
 }
  #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector,
  #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector:before {
@@ -376,7 +371,7 @@
   background-color: #ffc107;
 }
  #simple-or-a:checked ~ #simple-or-result:after {
-  top: -3rem;
+  top: -3.25rem;
 }
  #simple-or-a:checked ~ #simple-or-result + .Connector,
  #simple-or-a:checked ~ #simple-or-result + .Connector:before {
@@ -398,7 +393,7 @@
   background-color: #ffc107;
 }
  #simple-or-b:checked ~ #simple-or-result:after {
-  top: -3rem;
+  top: -3.25rem;
 }
  #simple-or-b:checked ~ #simple-or-result + .Connector,
  #simple-or-b:checked ~ #simple-or-result + .Connector:before {
@@ -422,7 +417,7 @@
 }
  #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result:after,
  #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result:after {
-  top: -3rem;
+  top: -3.25rem;
 }
  #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector,
  #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector,
