Colorize results through gates only

--- a/styles/logic.less
+++ b/styles/logic.less
@@ -2,7 +2,7 @@
 @import "_combinators";
 
 .xor(~'#simple-xor-a', ~'#simple-xor-b', {
-	~ #simple-xor-result, ~#simple-xor-gate {
+	~#simple-xor-gate {
 		.On();
 	}
 });
