--- a/styles/_theme.less
+++ b/styles/_theme.less
@@ -48,7 +48,7 @@
 // connectee.  
 .ConnectorsFor(@content) {
 	.Recurse(4, {	// We currently only ever have four levels of connectors
-		&, &:before { @content(); }
+		@content();
 	});
 
 	.Recurse(@count, @content) {
@@ -60,6 +60,14 @@
 			.Recurse(@count - 1, @content);
 		}
 	}
+}
+
+.ColorizeConnectors(@background) {
+	.ConnectorsFor({ 
+		&, &:before {
+			background-color: @background;
+		}
+	});
 }
 
 // Draws a box around a value (input or computed result).  The caller 
@@ -106,10 +114,6 @@
 	&:after {
 		top: -@valueSize;
 	}
-
-	.ConnectorsFor({
-		background-color: @activeColor;
-	});
 }
 
 .Canvas input[type=checkbox] {
@@ -128,23 +132,20 @@
 	.ValueContent();
 	&:checked {
 		.ActiveValueContent();
+		.ColorizeConnectors(@activeColor);
 	}
 
 	&:hover {
 		&:before {
 			background-color: @inactiveHoverColor;
 		}
-		.ConnectorsFor({
-			background-color: @inactiveHoverColor;
-		});
+		.ColorizeConnectors(@inactiveHoverColor);
 
 		&:checked {
 			&:before {
 				background-color: @activeHoverColor;
 			}
-			.ConnectorsFor({
-				background-color: @activeHoverColor;
-			});
+			.ColorizeConnectors(@activeHoverColor);
 		}
 	}
 }
@@ -334,15 +335,21 @@
 	.ValueContent();
 }
 
-// Applied to output values (.Result) when the logic gate evaluates to true.
+// Applied to gates when the logic gate evaluates to true.
 .On() {
-	background-color: @activeColor;
 	&.Gate.OR, &.Gate.XOR {
 		span:before, &:after {
 			background-color: @activeColor;
 		}
 	}
-	.ActiveValueContent();
+	.ColorizeConnectors(@activeColor);
+	// Colorize any result connected to the gate.
+	.ConnectorsFor({
+		+ .Result {
+			background-color: @activeColor;
+			.ActiveValueContent();
+		}
+	});
 }
 
 .OrGate(@baseStraightHeight) {
@@ -362,7 +369,6 @@
 			pow(@gateWidth, 2)
 		  - pow(@gateWidth / 2 + @connectorThickness / 2, 2)));
 
-	background-color: transparent !important;	// Override .On()
 	position: relative;
 	width: @gateWidth;
 	height: @straightHeight + @tipRadius;
