--- a/styles/logic.css
+++ b/styles/logic.css
@@ -244,7 +244,6 @@
           transition: top cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
 }
 .Gate.OR {
-  background-color: transparent !important;
   position: relative;
   width: 4rem;
   height: 5.13987789rem;
@@ -306,7 +305,6 @@
   border-bottom-right-radius: 4rem;
 }
 .Gate.XOR {
-  background-color: transparent !important;
   position: relative;
   width: 4rem;
   height: 6.13987789rem;
@@ -394,87 +392,77 @@
   background: #e0e0e0;
   border: 0.125rem solid #ffa000;
 }
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result,
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate {
-  background-color: #ffc107;
-}
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result.Gate.OR span:before,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result.Gate.OR span:before,
 #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate.Gate.OR span:before,
 #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate.Gate.OR span:before,
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result.Gate.XOR span:before,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result.Gate.XOR span:before,
 #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate.Gate.XOR span:before,
 #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate.Gate.XOR span:before,
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result.Gate.OR:after,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result.Gate.OR:after,
 #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate.Gate.OR:after,
 #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate.Gate.OR:after,
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result.Gate.XOR:after,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result.Gate.XOR:after,
 #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate.Gate.XOR:after,
 #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate.Gate.XOR:after {
   background-color: #ffc107;
 }
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result:after,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result:after,
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate:after,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate:after {
-  top: -3.25rem;
-}
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result + .Connector,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result + .Connector,
 #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector,
 #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector,
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result + .Connector:before,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result + .Connector:before,
 #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector:before,
 #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector:before {
   background-color: #ffc107;
 }
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result + .Connector + .Connector,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result + .Connector + .Connector,
 #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector + .Connector,
 #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector + .Connector,
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result + .Connector + .Connector:before,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result + .Connector + .Connector:before,
 #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector + .Connector:before,
 #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector + .Connector:before {
   background-color: #ffc107;
 }
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result + .Connector + .Connector + .Connector,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result + .Connector + .Connector + .Connector,
 #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector + .Connector + .Connector,
 #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector + .Connector + .Connector,
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result + .Connector + .Connector + .Connector:before,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result + .Connector + .Connector + .Connector:before,
 #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector + .Connector + .Connector:before,
 #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector + .Connector + .Connector:before {
   background-color: #ffc107;
 }
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result + .Connector + .Connector + .Connector + .Connector,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result + .Connector + .Connector + .Connector + .Connector,
 #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector + .Connector + .Connector + .Connector,
 #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector + .Connector + .Connector + .Connector,
-#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-result + .Connector + .Connector + .Connector + .Connector:before,
-#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-result + .Connector + .Connector + .Connector + .Connector:before,
 #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector + .Connector + .Connector + .Connector:before,
 #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector + .Connector + .Connector + .Connector:before {
   background-color: #ffc107;
 }
- #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result {
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector + .Result,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector + .Result {
   background-color: #ffc107;
+}
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector + .Result:after,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector + .Result:after {
+  top: -3.25rem;
+}
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector + .Connector + .Result,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector + .Connector + .Result {
+  background-color: #ffc107;
+}
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector + .Connector + .Result:after,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector + .Connector + .Result:after {
+  top: -3.25rem;
+}
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector + .Connector + .Connector + .Result,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector + .Connector + .Connector + .Result {
+  background-color: #ffc107;
+}
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector + .Connector + .Connector + .Result:after,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector + .Connector + .Connector + .Result:after {
+  top: -3.25rem;
+}
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector + .Connector + .Connector + .Connector + .Result,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector + .Connector + .Connector + .Connector + .Result {
+  background-color: #ffc107;
+}
+#simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~ #simple-xor-gate + .Connector + .Connector + .Connector + .Connector + .Result:after,
+#simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~ #simple-xor-gate + .Connector + .Connector + .Connector + .Connector + .Result:after {
+  top: -3.25rem;
 }
  #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result.Gate.OR span:before,
  #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result.Gate.XOR span:before,
  #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result.Gate.OR:after,
  #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result.Gate.XOR:after {
   background-color: #ffc107;
-}
- #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result:after {
-  top: -3.25rem;
 }
  #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector,
  #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector:before {
@@ -492,17 +480,35 @@
  #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector + .Connector + .Connector + .Connector:before {
   background-color: #ffc107;
 }
- #simple-or-a:checked ~ #simple-or-result {
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector + .Result {
   background-color: #ffc107;
+}
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector + .Result:after {
+  top: -3.25rem;
+}
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector + .Connector + .Result {
+  background-color: #ffc107;
+}
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector + .Connector + .Result:after {
+  top: -3.25rem;
+}
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector + .Connector + .Connector + .Result {
+  background-color: #ffc107;
+}
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector + .Connector + .Connector + .Result:after {
+  top: -3.25rem;
+}
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector + .Connector + .Connector + .Connector + .Result {
+  background-color: #ffc107;
+}
+ #simple-and-a:checked ~ #simple-and-b:checked ~ #simple-and-result + .Connector + .Connector + .Connector + .Connector + .Result:after {
+  top: -3.25rem;
 }
  #simple-or-a:checked ~ #simple-or-result.Gate.OR span:before,
  #simple-or-a:checked ~ #simple-or-result.Gate.XOR span:before,
  #simple-or-a:checked ~ #simple-or-result.Gate.OR:after,
  #simple-or-a:checked ~ #simple-or-result.Gate.XOR:after {
   background-color: #ffc107;
-}
- #simple-or-a:checked ~ #simple-or-result:after {
-  top: -3.25rem;
 }
  #simple-or-a:checked ~ #simple-or-result + .Connector,
  #simple-or-a:checked ~ #simple-or-result + .Connector:before {
@@ -520,17 +526,35 @@
  #simple-or-a:checked ~ #simple-or-result + .Connector + .Connector + .Connector + .Connector:before {
   background-color: #ffc107;
 }
- #simple-or-b:checked ~ #simple-or-result {
+ #simple-or-a:checked ~ #simple-or-result + .Connector + .Result {
   background-color: #ffc107;
+}
+ #simple-or-a:checked ~ #simple-or-result + .Connector + .Result:after {
+  top: -3.25rem;
+}
+ #simple-or-a:checked ~ #simple-or-result + .Connector + .Connector + .Result {
+  background-color: #ffc107;
+}
+ #simple-or-a:checked ~ #simple-or-result + .Connector + .Connector + .Result:after {
+  top: -3.25rem;
+}
+ #simple-or-a:checked ~ #simple-or-result + .Connector + .Connector + .Connector + .Result {
+  background-color: #ffc107;
+}
+ #simple-or-a:checked ~ #simple-or-result + .Connector + .Connector + .Connector + .Result:after {
+  top: -3.25rem;
+}
+ #simple-or-a:checked ~ #simple-or-result + .Connector + .Connector + .Connector + .Connector + .Result {
+  background-color: #ffc107;
+}
+ #simple-or-a:checked ~ #simple-or-result + .Connector + .Connector + .Connector + .Connector + .Result:after {
+  top: -3.25rem;
 }
  #simple-or-b:checked ~ #simple-or-result.Gate.OR span:before,
  #simple-or-b:checked ~ #simple-or-result.Gate.XOR span:before,
  #simple-or-b:checked ~ #simple-or-result.Gate.OR:after,
  #simple-or-b:checked ~ #simple-or-result.Gate.XOR:after {
   background-color: #ffc107;
-}
- #simple-or-b:checked ~ #simple-or-result:after {
-  top: -3.25rem;
 }
  #simple-or-b:checked ~ #simple-or-result + .Connector,
  #simple-or-b:checked ~ #simple-or-result + .Connector:before {
@@ -548,9 +572,29 @@
  #simple-or-b:checked ~ #simple-or-result + .Connector + .Connector + .Connector + .Connector:before {
   background-color: #ffc107;
 }
- #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result,
- #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result {
+ #simple-or-b:checked ~ #simple-or-result + .Connector + .Result {
   background-color: #ffc107;
+}
+ #simple-or-b:checked ~ #simple-or-result + .Connector + .Result:after {
+  top: -3.25rem;
+}
+ #simple-or-b:checked ~ #simple-or-result + .Connector + .Connector + .Result {
+  background-color: #ffc107;
+}
+ #simple-or-b:checked ~ #simple-or-result + .Connector + .Connector + .Result:after {
+  top: -3.25rem;
+}
+ #simple-or-b:checked ~ #simple-or-result + .Connector + .Connector + .Connector + .Result {
+  background-color: #ffc107;
+}
+ #simple-or-b:checked ~ #simple-or-result + .Connector + .Connector + .Connector + .Result:after {
+  top: -3.25rem;
+}
+ #simple-or-b:checked ~ #simple-or-result + .Connector + .Connector + .Connector + .Connector + .Result {
+  background-color: #ffc107;
+}
+ #simple-or-b:checked ~ #simple-or-result + .Connector + .Connector + .Connector + .Connector + .Result:after {
+  top: -3.25rem;
 }
  #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result.Gate.OR span:before,
  #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result.Gate.OR span:before,
@@ -561,10 +605,6 @@
  #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result.Gate.XOR:after,
  #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result.Gate.XOR:after {
   background-color: #ffc107;
-}
- #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result:after,
- #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result:after {
-  top: -3.25rem;
 }
  #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector,
  #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector,
@@ -589,5 +629,37 @@
  #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Connector + .Connector:before,
  #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Connector + .Connector:before {
   background-color: #ffc107;
+}
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Result,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Result {
+  background-color: #ffc107;
+}
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Result:after,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Result:after {
+  top: -3.25rem;
+}
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Result,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Result {
+  background-color: #ffc107;
+}
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Result:after,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Result:after {
+  top: -3.25rem;
+}
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Connector + .Result,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Connector + .Result {
+  background-color: #ffc107;
+}
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Connector + .Result:after,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Connector + .Result:after {
+  top: -3.25rem;
+}
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Connector + .Connector + .Result,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Connector + .Connector + .Result {
+  background-color: #ffc107;
+}
+ #simple-xor-a:not(:checked) ~ #simple-xor-b:checked ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Connector + .Connector + .Result:after,
+ #simple-xor-a:checked ~ #simple-xor-b:not(:checked) ~  #simple-and-a:checked ~ #simple-and-b:checked ~ #compound-result + .Connector + .Connector + .Connector + .Connector + .Result:after {
+  top: -3.25rem;
 }
 /*# sourceMappingURL=logic.css.map */
