Fix result centering

--- a/styles/_theme.less
+++ b/styles/_theme.less
@@ -333,6 +333,12 @@
 	margin: -@borderThickness;
 	.ValueBox();
 	.ValueContent();
+
+	// Make the text element cover the parent border
+	&:after {
+		margin-left: -@borderThickness;
+		margin-top: -@borderThickness;
+	}
 }
 
 // Applied to gates when the logic gate evaluates to true.
