--- a/styles/_theme.less
+++ b/styles/_theme.less
@@ -1,4 +1,5 @@
 ﻿@import "_mixins";
+@import "_variables";
 
 @remSize: 16px;
 
@@ -9,7 +10,7 @@
 @activeColor: #FFC107;
 @activeHoverColor: #FFB300;
 
-@transitionDuration: cubic-bezier(.4, 0, .2, 1) .3s;
+@transitionDuration: @easing .3s;
 
 @borderThickness: 2px / @remSize * 1rem;
 @border: @borderThickness solid @borderColor;
