--- a/styles/layout.css
+++ b/styles/layout.css
@@ -52,8 +52,9 @@ nav > a:before {
   left: 0;
   top: -2px;
   bottom: 64px;
-  -webkit-transition: bottom 0.3s cubic-bezier(0.4, 0, 0.2, 1), top 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-          transition: bottom 0.3s cubic-bezier(0.4, 0, 0.2, 1), top 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+  -webkit-transition: bottom 0.3s cubic-bezier(0.4, 0, 0.2, 1), top 0.3s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+          transition: bottom 0.3s cubic-bezier(0.4, 0, 0.2, 1), top 0.3s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 nav > a:target {
   color: white !important;
@@ -61,6 +62,9 @@ nav > a:target {
 nav > a:target:before {
   top: 62px;
   bottom: 0;
+  opacity: 1;
+  -webkit-transition: bottom 0.3s cubic-bezier(0.4, 0, 0.2, 1), top 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+          transition: bottom 0.3s cubic-bezier(0.4, 0, 0.2, 1), top 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
 nav > section {
   position: absolute;
@@ -68,10 +72,19 @@ nav > section {
   bottom: 0;
   left: 0;
   right: 0;
-  display: none;
   padding: 48px;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: margin-left 0.3s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.3s;
+          transition: margin-left 0.3s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.3s;
+  margin-left: -96px;
+}
+nav > a:target + section ~ section {
+  margin-left: 96px;
 }
 nav > a:target + section {
-  display: block;
+  pointer-events: auto;
+  opacity: 1;
+  margin: 0;
 }
 /*# sourceMappingURL=layout.css.map */
